header and banner added

--- a/index.html
+++ b/index.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer-gear</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@400;700;900&family=Open+Sans:wght@400;500;600;700;800&family=Poppins:wght@400;500;600;700;800;900&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <header>
+        <h1 class="header-title">Influencer products</h1>
+        <nav>
+            <a href="">Home</a>
+            <a href="">Products</a>
+            <a href="">Sign up</a>
+            <a href="">Log in</a>
+            <span class="header-icon"><i class="fa-solid fa-magnifying-glass"></i></span>
+            <span class="header-icon"><i class="fa-solid fa-cart-shopping"></i></span>
+        </nav>
+    </header>
+    <section class="banner">
+        <div class="banner-content">
+            <h3 class="banner-title">Start your Journey as <br> 
+                Influencer
+            </h3>
+            <p class="banner-description">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br> vestibulum sed scelerisque eros. Lectus faucibus.</p>
+            <button class="btn-primary">Preebook now<i class="fa-solid fa-arrow-right"></i></button>
+        </div>
+        <div class="banner-img">
+            <img src="Images/main-camera.png">
+        </div>
+    </section>
     
 </body>
 </html>
